--- a/template/layout/admin.html
+++ b/template/layout/admin.html
@@ -70,19 +70,19 @@
         <div class="navbar-default sidebar" id="leftTree" role="navigation">
             <div class="sidebar-nav navbar-collapse">
                 <ul class="nav" id="side-menu">
-                    <li {% if active=='saler' or active=='referee' or active=='store' or active=='admin_user'
+                    <li {% if active=='shop_manager' or active=='referee' or active=='store' or active=='admin_user'
                         or active=='user' or active=="admin_referee"%} class="active"{% endif %} ">
                     <a href="#"><i class="fa fa-user fa-fw"></i>&nbsp;&nbsp;&nbsp;用户管理
                         <span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li >
-                            <a {% if active=='user' %} class="active"{% endif %} href="/admin/admin_user">后台用户</a>
+                            <a {% if active=='admin_user' %} class="active"{% endif %} href="/admin/admin_user">后台用户</a>
                         </li>
                         <li >
-                            <a {% if active=='saler' %} class="active"{% endif %} href="/admin/shop_manager">店长</a>
+                            <a {% if active=='shop_manager' %} class="active"{% endif %} href="/admin/shop_manager">店长</a>
                         </li>
                         <li>
-                            <a {% if active=='store' %} class="active"{% endif %} href="/admin/user">客户</a>
+                            <a {% if active=='user' %} class="active"{% endif %} href="/admin/user">客户</a>
                         </li>
                     </ul>
                     </li>
