--- a/template/layout/admin.html
+++ b/template/layout/admin.html
@@ -70,43 +70,66 @@
         <div class="navbar-default sidebar" id="leftTree" role="navigation">
             <div class="sidebar-nav navbar-collapse">
                 <ul class="nav" id="side-menu">
-                    <li {% if active=='shop_manager' or active=='referee' or active=='store' or active=='admin_user'
+                    <li {% if active=='manager' or active=='referee' or active=='store' or active=='admin_user'
                         or active=='user' or active=="admin_referee"%} class="active"{% endif %} ">
                     <a href="#"><i class="fa fa-user fa-fw"></i>&nbsp;&nbsp;&nbsp;用户管理
                         <span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li >
-                            <a {% if active=='admin_user' %} class="active"{% endif %} href="/admin/admin_user">后台用户</a>
+                            <a {% if active=='user' %} class="active"{% endif %} href="/admin/admin_user">后台用户</a>
                         </li>
                         <li >
-                            <a {% if active=='shop_manager' %} class="active"{% endif %} href="/admin/shop_manager">店长</a>
+                            <a {% if active=='manager' %} class="active"{% endif %} href="/admin/manager">店长</a>
                         </li>
                         <li>
-                            <a {% if active=='user' %} class="active"{% endif %} href="/admin/user">客户</a>
+                            <a {% if active=='store' %} class="active"{% endif %} href="/admin/user">客户</a>
                         </li>
                     </ul>
                     </li>
 
                     <li {% if active=='p_product' or active=='ads' or active=='hot_search' or active=='pa' %} class="active" {%endif %}>
-                        <a  href="#"><i class="fa fa-briefcase fa-fw"></i>&nbsp;&nbsp;&nbsp;QR码管理
+                        <a  href="#"><i class="fa fa-picture-o fa-fw"></i>&nbsp;&nbsp;&nbsp;QR码管理
                             <span class="fa arrow"></span>
                         </a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a {% if active=='p_product' %}class="active"{% endif %} href="/admin/products">QR码产品</a>
                             </li>
-                            <li>
-                                <a {% if active=='ads' %}class="active"{% endif %} href="/admin/advertisement">广告管理</a>
-                            </li>
+                            <!--<li>-->
+                                <!--<a {% if active=='ads' %}class="active"{% endif %} href="/admin/advertisement">广告管理</a>-->
+                            <!--</li>-->
                         </ul>
                     </li>
                     <li {% if active=='category' or active=='brand' or active=='product_n'  or
                         active=='product_s' or active=='c_b' %}class="active"{% endif %}>
-                        <a  href="#"><i class="fa fa-picture-o fa-fw"></i>&nbsp;&nbsp;&nbsp;店长管理
+                        <a  href="#"><i class="fa fa-yen fa-fw"></i>&nbsp;&nbsp;&nbsp;奖励积分设定
                             <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a {% if active=='category' %} class="active"{% endif %} href="/admin/category">店长</a>
+                                <a {% if active=='category' %} class="active"{% endif %} href="/admin/recommend">推荐奖励</a>
+                            </li>
+                        </ul>
+
+                        <ul class="nav nav-second-level">
+                            <li>
+                                <a {% if active=='category' %} class="active"{% endif %} href="/admin/consumption">消费奖励</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li {% if active=='category' or active=='brand' or active=='product_n'  or
+                        active=='product_s' or active=='c_b' %}class="active"{% endif %}>
+                        <a  href="#"><i class="fa fa-bar-chart-o fa-fw"></i>&nbsp;&nbsp;&nbsp;统计报表
+                            <span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level">
+                            <li>
+                                <a {% if active=='category' %} class="active"{% endif %} href="/admin/area_statistics">地区统计</a>
+                            </li>
+                        </ul>
+
+                        <ul class="nav nav-second-level">
+                            <li>
+                                <a {% if active=='category' %} class="active"{% endif %} href="/admin/manager_statistics">店长业绩</a>
                             </li>
                         </ul>
                     </li>
@@ -117,19 +140,7 @@
                             <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a {% if active=='pic' %} class="active"{% endif %} href="/admin/upload_pic">图片上传</a>
-                            </li>
-                            <li>
-                                <a {% if active=='msg' %} class="active"{% endif %} href="/admin/send_msg">消息群发</a>
-                            </li>
-                            <li>
-                                <a href="/ajax/weixin_menu">重置微信菜单</a>
-                            </li>
-                            <li>
                                 <a {% if active=='log' %}class="active"{% endif %} href="/admin/log">系统日志</a>
-                            </li>
-                            <li>
-                                <a {% if active=='update' %}class="active"{% endif %} href="/admin/update">更新管理</a>
                             </li>
                             <li>
                                 <a {% if active=='pw' %} class="active"{% endif %} href="/admin/pw">修改密码</a>
